<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.MainFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/TextInputLayoutStyle"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="27"
        app:errorEnabled="true"
        app:helperText="Required"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_submit"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            tools:text="Anisha">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:text="Submit"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/input_layout_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout_name" />

</androidx.constraintlayout.widget.ConstraintLayout>