<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/fragment_main">

    <fragment
        android:id="@+id/fragment_main"
        android:name="inas.anisha.classify.fragments.main.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_mainFragment_to_scheduleFragment"
            app:destination="@id/fragment_schedule">
            <argument
                android:name="UserName"
                app:argType="string" />
        </action>
    </fragment>

...
